improve test coverage and mailer performace

--- a/app/views/bitcrap_mailer/order_confirmation.html.erb
+++ b/app/views/bitcrap_mailer/order_confirmation.html.erb
@@ -615,7 +615,9 @@ Your Bitcrap will be sent out soon!</span></span></h1>
 <em>$<%= @order.amount %> Amount</em><br>
 <%= @order.name %><br>
 <%= @address.address_line_1 %><br>
-<%= @address.address_line_2 %><br>
+<% if line_2 = @address.address_line_2 %>
+  <%= line_2 %><br>
+<% end  %>
 <%= "#{@address.city}, #{@address.state}  #{@address.zip_code}" %></div>
 &nbsp;
 
