--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -79,7 +79,7 @@
         </div>
         <div class="form-group form-inline">
           <%= s.text_field :city, placeholder: 'City', class: 'form-control' %>
-          <%= s.select :state, options_for_select(us_states), { prompt: 'State' }, class: 'form-control' %>
+          <%= s.select :state, options_for_select(ShippingAddressesHelper.us_states), { prompt: 'State' }, class: 'form-control' %>
           <%= s.text_field :zip_code, placeholder: 'Zip Code', class: 'form-control' %>
         </div>
       <% end %>
