--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,10 @@
     <div class="footer">
       <div class="footer-inner center-box">
         <p>&copy; 2014 &nbsp; Bitcrap</p>
+        <div class="footer-links">
+          <%= link_to 'Terms', tos_path, class: 'underline' %> |
+          <%= link_to 'Privacy Policy', privacy_path, class: 'underline' %>
+        </div>
       </div>
     </div> <%# end .footer %>
 
