--- a/app/views/home/_checkout_form.html.erb
+++ b/app/views/home/_checkout_form.html.erb
@@ -44,5 +44,9 @@
        <%= s.text_field :zip_code, placeholder: 'Zip Code', maxlength: 5, class: 'form-control' %>
      </div>
    <% end %>
-   <%= f.submit 'Submit', class: 'btn btn-primary center-box', data: { disable_with: 'Submitting...' } %>
+  <% if Order.amount_remaining > 0 %>
+    <%= f.submit 'Submit', class: 'btn btn-primary center-box', data: { disable_with: 'Submitting...' } %>
+  <% else %>
+    <%= f.submit 'Sold Out', class: 'btn btn-disabled center-box', disabled: true %>
+  <% end %>
  <% end %>
