update tos language

--- a/app/views/home/tos.html.erb
+++ b/app/views/home/tos.html.erb
@@ -5,8 +5,8 @@
   <p>We guarantee that you will receive a gift that is fun or useful and approximately equal to the amount you paid after considering order shipping and processing costs. Gifts may consist of one or more items.</p>
 
   <h4>Satisfaction</h4>
-  <p>We work hard to ensure that all of our customers are happy with the gifts they receive. However, due to the nature of the business, we cannot provide refunds for anything other than damaged or faulty goods.</p>
+  <p>We work hard to ensure that all of our customers are happy with the gifts they receive. If you are unhappy with your gift, please let us know and we will try to make sure your next one is better.</p>
 
   <h4>Returns and Refunds</h4>
-  <p>If you receive any damaged goods from Bitcrap, we will replace them with something of equal value or more to the damaged item. Due to our low prices, we cannot accept returns.</p>
+  <p>If you receive any damaged goods from Bitcrap, we will replace them with something of equal value or more. Due to our low prices, we cannot accept returns for anything other than damaged goods.</p>
 </div>
